--- a/src/components/wordCard.module.css
+++ b/src/components/wordCard.module.css
@@ -26,6 +26,12 @@
   border-radius: 5px;
 }
 .big {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 30%;
+  height: 170px;
   background-color: #fefcf8;
-  padding: 60px 80px;
+  border-radius: 20px;
+  padding: 80px 30px;
 }
