--- a/src/components/wordCard.module.css
+++ b/src/components/wordCard.module.css
@@ -3,14 +3,15 @@
   flex-direction: column;
   align-items: center;
   max-width: 1200px;
-  margin: 0 auto;
+  margin-top: 115px;
 }
 .card {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   padding: 15px;
-  margin: 4px;
+  margin: 4px 0;
   border-radius: 10px;
   background-color: #fefcf8;
 }
@@ -29,9 +30,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 30%;
-  height: 170px;
+  height: 300px;
   background-color: #fefcf8;
   border-radius: 20px;
-  padding: 80px 30px;
 }
