--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -7,9 +12,43 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #98d7f6;
   color: #633423;
-  font-size: 17px;
+  font-size: 18px;
 }
-
+.app {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 120px;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  width: 1200px;
+}
+a {
+  text-decoration: none;
+  color: #633423;
+  font-weight: 600;
+}
+.nav {
+  border: 3px solid transparent;
+  padding: 10px 20px;
+  margin: 4px;
+}
+.nav:hover {
+  border: 3px solid #633423;
+  border-radius: 10px;
+}
+.active {
+  background-color: #ffd0a7;
+  border: 3px solid #633423;
+  border-radius: 10px;
+  padding: 10px 20px;
+  margin: 4px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
