--- a/src/components/wordCard.module.css
+++ b/src/components/wordCard.module.css
@@ -36,3 +36,11 @@
   background-color: #fefcf8;
   border-radius: 20px;
 }
+.redBorder {
+  border: 2px solid red;
+}
+.error {
+  color: red;
+  z-index: 2000;
+  background-color: beige;
+}
